--- a/forjob/package.json
+++ b/forjob/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aos",
+  "name": "sigmar",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
@@ -16,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.1.5",
+    "vue-loader": "^15.9.1",
     "vue-loading-overlay": "^3.3.0",
     "vue-router": "^3.1.5",
     "vue-slick": "^1.1.15",
